# multi_plankton_classification_commande

./: Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
multi_plankton_classification/: api.py  utils.py
multi_plankton_classification/tests/: test_api.py
