# -*- coding: utf-8 -*-
[metadata]
name = multi_plankton_classification
summary = return if the image is multi plankton or not
description-file =
    README.md
author = jean olivier irisson
author-email = 
version = 0.0.1
license = MIT
home-page = https://github.com/marinecolin/multi_plankton_classification
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    multi_plankton_classification

[entry_points]
deepaas.v2.model =
    multi_plankton_classification = multi_plankton_classification.api
